# neossat2caom2

./: Dockerfile  README.md  config.yml  setup.cfg  setup.py
.github/workflows/: docker-publish.yaml
blank2caom2/: composable.py  main_app.py
blank2caom2/tests/: test_main_app.py  test_storage_name.py
config/: config.yml  state.yml
draost2caom2/: composable.py  draost2caom2.py
draost2caom2/tests/: test_main_app.py  test_storage_name.py
neossat2caom2/: __init__.py  collection_builder.py  composable.py  data_source.py  fits2caom2_augmentation.py  main_app.py  preview_augmentation.py  scrape.py  storage_name.py  validator.py  work.py
neossat2caom2/tests/: conftest.py  test_ad_remove.py  test_caom_gen_visit.py  test_composable.py  test_data_source.py  test_main_app.py  test_preview_augmentation.py  test_scrape.py  test_storage_name.py  test_validator.py  test_visitors.py
neossat2caom2/tests/data/: 2015347015200.expected.xml  2019213173800.expected.xml  2019213174531.expected.xml  2019213215700.expected.xml  2019258000140.expected.xml  2019259111450.expected.xml  2019267234420.expected.xml  2020255152013.expected.xml  2021212015920.expected.xml  2021212015920.in.xml  2022255054715.expected.xml  2023105181520.expected.xml  NEOS_SCI_2015347015200_clean.fits.header  NEOS_SCI_2019213173800.fits.header  NEOS_SCI_2019213173800_cor.fits.header  NEOS_SCI_2019213173800_cord.fits.header  config.yml  day_page.html  (+31 more)
scripts/: config.yml  docker-entrypoint.sh  errors_list.txt  find_ingest_anomaly.sh  neossat_run.sh  neossat_run_state.sh  neossat_run_validate.sh  state.yml
